--- a/my-app/src/Components/Login/Login.module.css
+++ b/my-app/src/Components/Login/Login.module.css
@@ -14,39 +14,68 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #fff;
 }
 
 .form {
     border: 1px solid silver;
     border-radius: 10px;
-    background-color: #fff;
-    width: fit-content;
-    padding: 20px;
+    /* From https://css.glass */
+    background: rgba(190, 154, 114, 0.62);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(3.4px);
+    -webkit-backdrop-filter: blur(3.4px);
+    border: 1px solid rgba(190, 154, 114, 0.35);
+    width: 450px;
+    text-align: center;
+}
+
+.form h1 {
+    margin: 20px;
+    margin-bottom: 50px;
 }
 
 .formField {
-    margin: 10px;
     display: flex;
     flex-direction: column;
 }
 
 .formField input {
-    background-color: #f9f9f9;
+    /* From https://css.glass */
+    background: rgba(190, 154, 114, 0.62);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(3.4px);
+    -webkit-backdrop-filter: blur(3.4px);
     border: none;
-    border-radius: 10px;
-    width: 300px;
-    height: 30px;
+    /* border-top: 1px solid black; */
+    border-bottom: 1px solid black;
+    width: 400px;
+    height: 40px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+
+.formField input::placeholder {
+    text-align: center;
+    color: #fff;
 }
 
 .buttonContainer button {
     margin-left: 10px;
-    width: 50px;
+    width: 100px;
     height: 40px;
     border: none;
     background-color: lightgoldenrodyellow;
     border-radius: 10px;
+    margin: 20px;
 }
 
 .buttonContainer button:hover {
     cursor: pointer;
+}
+
+.linksBox {
+    border-top: 1px solid silver;
 }
